<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/company_list_recy"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="374dp"
        android:layout_height="229dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/company_image"
            android:layout_width="135dp"
            android:layout_height="199dp"
            android:scaleType="fitXY"
            android:src="@mipmap/banner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.533" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="48dp"
            android:layout_height="47dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/company_image"
            app:layout_constraintTop_toTopOf="@+id/company_image"
            app:srcCompat="@mipmap/like" />

        <TextView
            android:id="@+id/company_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/company_title"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/company_image"
            app:layout_constraintTop_toTopOf="@+id/company_image" />

        <TextView
            android:id="@+id/city_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/city_title"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/company_title"
            app:layout_constraintTop_toBottomOf="@+id/company_title" />

        <TextView
            android:id="@+id/company_desc"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/company_desc"
            app:layout_constraintStart_toStartOf="@+id/city_title"
            app:layout_constraintTop_toBottomOf="@+id/city_title" />

        <Button
            android:id="@+id/inspect_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#EFC88E"
            android:text="@string/inspect"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@+id/company_image"
            app:layout_constraintTop_toBottomOf="@+id/company_desc" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="#D85073"
            android:text="@string/get_offer"
            app:layout_constraintBottom_toBottomOf="@+id/inspect_btn"
            app:layout_constraintStart_toEndOf="@+id/inspect_btn"
            app:layout_constraintTop_toTopOf="@+id/inspect_btn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>